examples/example_project_set.php
<?php

include "semor_api.php";

SEMOR::$token = "XXX";

/*
frekvency
1 - kad den
3 - kad 3dny
5 - kadch 5 dn
7 - kadch 7 dn
14 - kadch 14 dn
*/


//Uprava projektu
//upravuje se ve co je poslano, nejlpe vyplnuji jen to co chci zmnit
$data = array(
	"idp"=>1,//povinny parametr, ID v systmu SEMOR
	"url"=>"domena.tld",
	"https"=>"A",
	"lang"=>"CZ"
);

//Uprava projektu - jen zmna frekvence men
$data = array(
	"idp"=>1,//povinny parametr, ID v systmu SEMOR
	"frekvency"=>5
);

//Uprava projektu - zruen pravidelnho meen pozic
$data = array(
	"idp"=>1,//povinny parametr, ID v systmu SEMOR
	"frekvency"=>0
);

//Uprava projektu - logicke smazani projektu, pes status = A je mo projekt znovu kdykoliv aktivovat
$data = array(
	"idp"=>1,//povinny parametr, ID v systmu SEMOR
	"status"=>"N"
);


$result = SEMOR::SetProject($data);
if($result["status"] == 200){//zalozen novy projekt
	echo "Ve se uloilo v podku";
}else{
	//error
	print_r($result["error"]);
}
?>